[package]
name = "icfp2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.41"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
clap = { version = "3.2.19", features = ["derive"] }
image = "0.24.3"
derive_more = "0.99.17"

[profile.release]
debug = 1
